erDiagram
  users ||--o{ transactions : creates
  users ||--o{ sessions : has
  users }o--o{ roles : has
  roles }o--o{ permissions : has
  categories ||--o{ products : contains
  products ||--o{ transaction_items : sold in
  transactions ||--|{ transaction_items : contains

  users {
    bigint id PK
    varchar name
    varchar email UK
    timestamp email_verified_at
    varchar password
    text two_factor_secret
    text two_factor_recovery_codes
    timestamp two_factor_confirmed_at
    varchar remember_token
    timestamp created_at
    timestamp updated_at
  }

  roles {
    bigint id PK
    varchar name
    varchar guard_name
    timestamp created_at
    timestamp updated_at
  }

  permissions {
    bigint id PK
    varchar name
    varchar guard_name
    timestamp created_at
    timestamp updated_at
  }

  model_has_roles {
    bigint role_id PK,FK
    varchar model_type PK
    bigint model_id PK
  }

  role_has_permissions {
    bigint permission_id PK,FK
    bigint role_id PK,FK
  }

  categories {
    bigint id PK
    varchar name UK
    varchar slug UK
    text description
    timestamp created_at
    timestamp updated_at
  }

  products {
    bigint id PK
    bigint category_id FK
    varchar name
    varchar slug UK
    varchar sku UK
    decimal price
    int stock
    boolean is_unlimited_stock
    varchar image
    text description
    boolean is_active
    timestamp created_at
    timestamp updated_at
  }

  transactions {
    bigint id PK
    bigint user_id FK
    varchar customer
    varchar invoice_number UK
    decimal total_amount
    decimal paid_amount
    decimal change_amount
    varchar payment_method
    text notes
    timestamp created_at
    timestamp updated_at
  }

  transaction_items {
    bigint id PK
    bigint transaction_id FK
    bigint product_id FK
    int quantity
    decimal unit_price
    decimal subtotal
    timestamp created_at
    timestamp updated_at
  }

  sessions {
    varchar id PK
    bigint user_id FK
    varchar ip_address
    text user_agent
    longtext payload
    int last_activity
  }

  settings {
    bigint id PK
    varchar key UK
    text value
    timestamp created_at
    timestamp updated_at
  }
